--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bindings": "~1.2.1",
     "nan": "^2.2.0"
   },
+  "os" : [ "win32" ],
   "scripts": {
     "start": "npm build . && node ll_keyboard_hooks.js"
   }
