--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ll-keyboard-hook-win",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Node.js Addons Example #3",
   "main": "ll_keyboard_hooks.js",
   "gypfile": true,
@@ -8,7 +8,9 @@
     "bindings": "~1.2.1",
     "nan": "^2.2.0"
   },
-  "os" : [ "win32" ],
+  "os": [
+    "win32"
+  ],
   "scripts": {
     "start": "npm build . && node ll_keyboard_hooks.js"
   }
