--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ll-keyboard-hook-win",
-  "version": "3.0.0",
-  "description": "Node.js Addons Example #3",
+  "name": "@zaibot/ll-keyboard-hook-win",
+  "version": "4.0.0",
+  "description": "Listen to global keyboard events on Windows",
   "main": "ll_keyboard_hooks.js",
   "gypfile": true,
   "dependencies": {
-    "bindings": "~1.2.1",
-    "nan": "^2.2.0"
+    "bindings": "^1.2.1",
+    "nan": "^2.6.2"
   },
   "os": [
     "win32"
